Chart/commons-cli-normal/tests%20250617002527/compiler_output/CompilerOutput-FilterHelpAppendable_3_1Test.java.txt
/home/usc/ChatUniTest-python/Chart/commons-cli-normal/tests%20250617002527/test_cases/FilterHelpAppendable_3_1Test.java:29: error: FilterHelpAppendableTestImpl is not abstract and does not override abstract method appendTitle(CharSequence) in HelpAppendable
    private static class FilterHelpAppendableTestImpl extends FilterHelpAppendable {
                   ^
/home/usc/ChatUniTest-python/Chart/commons-cli-normal/tests%20250617002527/test_cases/FilterHelpAppendable_3_1Test.java:65: error: appendTitle(CharSequence) in FilterHelpAppendableTestImpl cannot implement appendTitle(CharSequence) in HelpAppendable
        public FilterHelpAppendable appendTitle(CharSequence title) {
                                    ^
  return type FilterHelpAppendable is not compatible with void
/home/usc/ChatUniTest-python/Chart/commons-cli-normal/tests%20250617002527/test_cases/FilterHelpAppendable_3_1Test.java:64: error: method does not override or implement a method from a supertype
        @Override
        ^
3 errors
